--- a/FrontEndApp/producerWeb__reDesign/src/index.css
+++ b/FrontEndApp/producerWeb__reDesign/src/index.css
@@ -9,3 +9,8 @@
     font-family: "Inter Tight", "sans-serif";
   }
 }
+@layer components {
+  .logo-text {
+    @apply font-extrabold first-letter:text-3xl md:first-letter:text-5xl first-letter:not-italic;
+  }
+}
