--- a/FrontEndApp/producerWeb__reDesign/src/index.css
+++ b/FrontEndApp/producerWeb__reDesign/src/index.css
@@ -13,4 +13,7 @@
   .logo-text {
     @apply font-extrabold first-letter:text-3xl md:first-letter:text-5xl first-letter:not-italic;
   }
+  .nav-item {
+    @apply mx-4 md:mx-4;
+  }
 }
